[gd_scene load_steps=14 format=2]

[ext_resource path="res://RenderTarget.tscn" type="PackedScene" id=1]
[ext_resource path="res://1px.png" type="Texture" id=2]
[ext_resource path="res://GI.shader" type="Shader" id=3]
[ext_resource path="res://Demo.gd" type="Script" id=4]
[ext_resource path="res://noise.png" type="Texture" id=5]
[ext_resource path="res://DrawTextureShader.shader" type="Shader" id=7]

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("LastFrameBuffer")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource( 3 )
shader_param/LIGHT_POS = Vector2( 0, 0 )
shader_param/PI = 3.1416
shader_param/RAYS_PER_PIXEL = 32.0
shader_param/RESOLUTION = Vector2( 0, 0 )
shader_param/frame = 0
shader_param/last_frame_buffer = SubResource( 17 )
shader_param/noise_texture = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("BackBuffer")

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource( 7 )
shader_param/sRGB = false
shader_param/min_alpha = 0.0
shader_param/texture_to_draw = SubResource( 18 )

[sub_resource type="ViewportTexture" id=16]
viewport_path = NodePath("BackBuffer")

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource( 7 )
shader_param/sRGB = true
shader_param/min_alpha = 1.0
shader_param/texture_to_draw = SubResource( 16 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("LastFrameBuffer")

[node name="Demo" type="Node2D"]
script = ExtResource( 4 )

[node name="BackBuffer" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )

[node name="LastFrameBuffer" parent="." instance=ExtResource( 1 )]
material = SubResource( 11 )

[node name="Light" type="Node2D" parent="."]
position = Vector2( 64, 64 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Screen" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 7 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugRTT" type="CanvasLayer" parent="."]

[node name="LastFrameBG" type="TextureRect" parent="DebugRTT"]
visible = false
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastFrameBuffer" type="TextureRect" parent="DebugRTT"]
visible = false
texture = SubResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
